--- a/Changes
+++ b/Changes
@@ -1,4 +1,9 @@
 Revision history for Perl extension Plack::Middleware::Debug::Redis.
 
+0.02  Mon Jan 14 05:35:26 2013
+    - added LICENSE
+    - updated build prerequisites
+    - in *.t Redis mocked with Test::MockObject
+
 0.01  Tue Jan  8 12:30:26 2013
 	- original version
